0.4.1
- specify on/off on event enable commands
- add some library functions for people to use in events
0.4.0
- Add ability to import/export events
0.3.1
- Use pcall for calling user defined functions
0.3.0
- Display message when event code fails to load
- Checkbox for enable/disable now displayed in events table
- Only save character specific settings when enabling/disabling an event, instead of all settings
- Save event checks for what changed before deciding whether to save full settings
- Added Categories to group events
- Categories can be created in the Categories section and then assigned when adding/editing events
- Added filtering to events list
- Events list now organized using category based tree nodes
- Removed table sorting in favor of the filter and collapsible categories
0.2.1
- Fix event viewer when event code includes formatted strings
- Add a couple more realistic sample events
0.2.0
- Change events to be indexed by name instead of number index
0.1.0
- Initial check-in