@@ -1,6 +1,7 @@
 0.4.1
 - specify on/off on event enable commands
 - add some library functions for people to use in events
+- add option to select from a template when creating events
 0.4.0
 - Add ability to import/export events
 0.3.1
